app/assets/stylesheets/src/shared/_scaffolds.scss
$footer-min-height: 117px;
$navbar-min-height: 56px;

:root,
:host,
[data-bs-theme="light"] {
  --tblr-red-300: #{$red-300};
  --tblr-green-300: #{$green-300};
}

:root,
:host {
  --tblr-btn-box-shadow: none;
  --tblr-box-shadow-input: none;
  --tblr-body-line-height: 1.5;
  --tblr-line-height-h2: 1.2;
  --tblr-font-sans-serif: -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto,
    Helvetica Neue, sans-serif;
}

.text-green-300 {
  color: var(--tblr-green-300);
}

.text-red-300 {
  color: var(--tblr-red-300);
}

html,
body {
  height: 100%;
  min-width: 320px;
}

.form-control {
  line-height: var(--tblr-body-line-height);
  text-overflow: ellipsis;

  &:focus {
    box-shadow:
      $box-shadow-input,
      0 0 0 0.25rem rgba(var(--tblr-primary-rgb), 0.25);
  }
}

// place the footer at the bottom of the page
.wrapper {
  min-height: calc(100% - $footer-min-height);
}

.font-medium {
  font-size: 0.875rem;
  line-height: 1.5;
}

.font-small {
  font-size: 0.75rem;
  line-height: 1rem;
}

.font-body {
  font-size: 1rem;
  line-height: 1.5rem;
}

main.container-fluid,
footer .container-fluid {
  padding-top: 24px;
  padding-bottom: 32px;
}

footer .container-fluid {
  color: var(--tblr-gray-500);
}

[class*="container"] {
  --tblr-gutter-x: 3rem;
}

.linkedin-blue {
  color: $linkedin-blue;
}

.hh-red {
  color: $hh-red;
}

.toughbyte-black {
  color: $toughbyte-black;
}

.code-green {
  color: $green;
}
.code-blue {
  color: $blue;
}
.code-gray {
  color: $gray-500;
}
.code-black {
  color: $gray-900;
}
.text-gray-600 {
  color: $gray-600;
}

// Most browsers don't support styling `<input>` tag which is required for file upload fields. This
// hack is used to place an invisible input near a real button so we can style the real button
// instead. The input is 100 pixels above because `cursor: pointer;` doesn't work within it's area.
//
// Example:
// .btn.btn-primary.file-upload-button
//   | Upload avatar
//   = form.file_field :avatar, class: "upload"
.file-upload-button {
  position: relative;
  overflow: hidden;
  input.upload {
    opacity: 0;
    filter: alpha(opacity=0);
    position: absolute;
    top: -100px;
    left: 0;
    height: calc(100% + 100px);
    width: 100%;
    cursor: pointer;
  }
}

// TODO: use this style for all similar buttons such as "pencil" icon
// instead of a custom styling.
.control-grey-icon {
  border: 0;

  svg {
    max-width: 14px;
    max-height: 14px;
  }
}

#files-table {
  .show-on-hover {
    display: none;
  }

  .hide-on-hover {
    display: inline-flex;
  }

  th:nth-child(4) {
    width: 56px;
  }

  .files-table-cv-column {
    &:hover {
      .show-on-hover {
        display: inline-flex;
      }

      .hide-on-hover {
        display: none;
      }
    }
  }
}

.hidden {
  display: none; // does not include !important flag as bootstrap d-none class
}

.links-row {
  .disabled {
    opacity: 0.65 !important;
  }
}

.filter-option {
  .filter-option-inner-inner {
    @extend .text-truncate;
  }
}

picture {
  svg {
    height: 100% !important;
  }
}

#ats-email-templates-variables {
  & > h2 {
    line-height: 1.5rem;
  }

  & > ul {
    padding-top: 1rem;
    line-height: 1.3125rem;
  }
}

.authentication-container {
  max-width: 460px;
}

// Alerts that precede the authentication-container should also be 460px in width.
#alerts:has(+ .authentication-container) {
  max-width: 460px;
  margin: 0 auto;
}

.icon {
  stroke-width: 1.25;
}

.avatar-64px {
  --tblr-avatar-size: 4rem;
  --tblr-avatar-font-size: 2rem;
  --tblr-avatar-status-size: 1rem;
  --tblr-avatar-icon-size: 2.5rem;
}

svg {
  max-width: unset;
}

.list-group {
  --tblr-list-group-item-padding-y: 0.75rem;
}

.nav-tabs {
  --tblr-nav-tabs-link-active-bg: transparent;

  .nav-item .nav-link.active {
    border-bottom-color: var(--tblr-body-bg);
  }
}

.modal-content .nav-item .nav-link.active {
  border-bottom-color: var(--tblr-modal-bg);
}

.col-form-label-sm {
  font-size: 0.875rem;
  padding-top: calc(0.25rem + var(--tblr-border-width));
  padding-bottom: calc(0.25rem + var(--tblr-border-width));
}

